feat: implemented tasks updates
